archive/hajimari/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hajimari-dashboard
  annotations:
    hajimari.io/enable: "false"
spec:
  hostnames:
    - "hajimari.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: hajimari
          port: 3000
